--- a/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
+++ b/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
@@ -1,9 +1,116 @@
 <section class="p-5 page-section" id="team">
   <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">The Team</h2>
+  
+    <body>
+      <!--   Tarjetas-->
+    <div class="title-cards">
+        <h2>The Team</h2>
+      </div>
+    <div class="container-card">
+      
+      <div class="card">
+      <figure>
+        <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+      </figure>
+      <div class="contenido-card">
+        <h3>MARCO IANNUZZI</h3>
+        <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet</p>
+        <a href="https://github.com/Marcoiannuzzi">Github</a>
+      </div>
     </div>
-    <div class="row">
+    <div class="card">
+      <figure>
+        <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+      </figure>
+      <div class="contenido-card">
+        <h3>TRACHTA JAVIER</h3>
+        <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet</p>
+        <a href="https://github.com/mjtrachta">Github</a>
+      </div>
+    </div>
+      <div class="card">
+      <figure>
+        <img src="https://static.vecteezy.com/system/resources/previews/000/227/854/original/female-developer-vector.jpg">
+      </figure>
+      <div class="contenido-card">
+        <h3>CRUZ KAREN YANINA NOEL</h3>
+        <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet</p>
+        
+        <a href="https://github.com/KarenYaninaN">Github</a>
+      </div>
+    </div>
+    </div>
+    <div class="container-card">
+      
+      <div class="card">
+        <figure>
+          <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+        </figure>
+        <div class="contenido-card">
+          <h3>OZAMIS CÉSAR GABRIEL</h3>
+          <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet</p>
+          <a href="https://github.com/Cesarozamis">Github</a>
+        </div>
+      </div>
+      <div class="card">
+        <figure>
+          <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+        </figure>
+        <div class="contenido-card">
+          <h3>CARDOZO PABLO SEBASTIAN</h3>
+          <p>Nosotros creamos y optimizamos tus perfiles en las Redes Sociales. Importantes para que tu presencia online sea completa.</p>
+          <a href="https://github.com/sebascardozo">Github</a>
+        </div>
+      </div>
+      <div class="card">
+        <figure>
+          <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+        </figure>
+        <div class="contenido-card">
+          <h3>NICOLAS MACIAS</h3>
+          <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+          <a href="https://github.com/NicoMacias">Github</a>
+        </div>
+      </div>
+     
+      </div>
+      <div class="container-card">
+        <div class="card">
+          <figure>
+            <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+          </figure>
+          <div class="contenido-card">
+            <h3>COSTA LEONARDO</h3>
+            <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+            <a href="https://github.com/LeonardoCostaH">Github</a>
+          </div> 
+        </div>
+        <div class="card">
+          <figure>
+            <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+          </figure>
+          <div class="contenido-card">
+            <h3>PAGUAGA DIEGO ANDRES</h3>
+            <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+            <a href="https://github.com/andrespaguaga">Github</a>
+          </div>
+        </div>
+        <div class="card2">
+          <!-- <figure>
+            <img src="https://envri.eu/wp-content/uploads/2016/08/software-developer-copy.jpg">
+          </figure>
+          <div class="contenido-card">
+            <h3>PAGUAGA DIEGO ANDRES</h3>
+            <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+            <a href="https://github.com/andrespaguaga">Github</a>
+          </div> -->
+        </div>
+       
+      </div>
+    <!--Fin   Tarjetas-->
+    </body>
+
+<div class="row">
       <div *ngFor="let item of team" class="col-md-3 text-center">
         <div>
           <img class="rounded-circle img-fluid" [src]="item.imagen" alt="..." />
