add commit with styles

--- a/criptoWallet/src/app/components/footer/footer.component.html
+++ b/criptoWallet/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
   href="/criptoWallet/src/app/components/footer/footer.component.css"
   rel="stylesheet"
 />
-<footer class="text-center text-lg-start bg-dark text-muted">
+<footer id="footer" class="text-center text-lg-start bg-dark text-muted">
   <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
