--- a/criptoWallet/src/app/components/home/home.component.css
+++ b/criptoWallet/src/app/components/home/home.component.css
@@ -1,8 +1,10 @@
-.imgLogo{
-    width: 120px;
+.imgLogo {
+  width: 170px;
+  height: 170px;
+  margin-top: 40px;
 }
 
-.alerta{
-    text-shadow: 2px 2px 5px red, -2px -2px 5px red;
-    opacity: 0.8;
+.alerta {
+  text-shadow: 2px 2px 5px red, -2px -2px 5px red;
+  opacity: 0.8;
 }
