--- a/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
+++ b/criptoWallet/src/app/components/quienes-somos/quienes-somos.component.html
@@ -1,7 +1,12 @@
 <section class="p-5 page-section" id="team">
   <div class="container">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">The Team</h2>
+      <img
+        src="../../../assets/imagenes/team/team-pil.png"
+        class="imgLogo"
+        alt="Registration page logo"
+      />
+      <h1 class="section-heading p-5">The Team</h1>
     </div>
     <div class="row">
       <div *ngFor="let item of team" class="col-md-3 text-center">
