--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -1,27 +1,30 @@
 <div class="login d-flex flex-column justify-content-start align-items-center">
-    <div class="d-flex flex-column justify-content-center align-items-center">
-      <img src="../../../assets/send-deposit.png" class="imgLogo" alt="Registration page logo">
-      <h2 class="p-3">Transaction History</h2>
-    </div>
-    <table class="table table-dark" >
-      <thead>
-        <tr class="table-dark">
-          <th scope="col">#</th>
-          <th scope="col">Transaction</th>
-          <th scope="col">Recipient</th>
-          <th scope="col">Account</th>
-          <th scope="col">Amount</th>
-        </tr>
-      </thead>
-      <tbody >
-        <tr *ngFor="let movimiento of movimientos">
-          <th scope="row">{{movimiento.id}}</th>
-          <td>{{movimiento.tipoDeTransaccion}}</td>
-          <td>{{movimiento.receptorNombre}}</td>
-          <td>{{movimiento.cuentaReceptor}}</td>
-          <td>{{movimiento.monto | currency}}</td>
-        </tr>
-      </tbody>
-    </table>
-   
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <img
+      src="../../../assets/send-deposit.png"
+      class="imgLogo"
+      alt="Registration page logo"
+    />
+    <h1 class="p-3">Transaction History</h1>
+  </div>
+  <table class="table table-dark">
+    <thead>
+      <tr class="table-dark">
+        <th scope="col">#</th>
+        <th scope="col">Transaction</th>
+        <th scope="col">Recipient</th>
+        <th scope="col">Account</th>
+        <th scope="col">Amount</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let movimiento of movimientos">
+        <th scope="row">{{ movimiento.id }}</th>
+        <td>{{ movimiento.tipoDeTransaccion }}</td>
+        <td>{{ movimiento.receptorNombre }}</td>
+        <td>{{ movimiento.cuentaReceptor }}</td>
+        <td>{{ movimiento.monto | currency }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
