--- a/criptoWallet/src/app/components/transaction/transaction.component.html
+++ b/criptoWallet/src/app/components/transaction/transaction.component.html
@@ -6,19 +6,20 @@
     <table class="table table-dark" >
       <thead>
         <tr class="table-dark">
-          <th scope="col">#</th>
-          <th scope="col">Transaction</th>
-          <th scope="col">Recipient</th>
+          <th scope="col">Date</th>
           <th scope="col">Account</th>
+          <th scope="col">Recipient Account</th>
+          <th scope="col">Type of operation</th>
           <th scope="col">Amount</th>
         </tr>
       </thead>
       <tbody >
         <tr *ngFor="let movimiento of movimientos">
-          <th scope="row">{{movimiento.idCuenta}}</th>
-          <td>{{movimiento.idTipoMovimientos}}</td>
+          <th scope="row">{{movimiento.fechaHoraTransaccion | date}}</th>
           <td>{{movimiento.cuentaOrigen}}</td>
           <td>{{movimiento.cuentaDestino}}</td>
+          <td *ngIf="movimiento.idTipoMovimientos==2">Deposit</td>
+          <td *ngIf="movimiento.idTipoMovimientos==3">Transfer</td>
           <td>{{movimiento.monto | currency}}</td>
         </tr>
       </tbody>
