--- a/criptoWallet/src/styles.css
+++ b/criptoWallet/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .container-html {
-  background-image: url("src/assets/imagenes/home/3d-cryptocurrency-rendering-design.jpg");
+  background-image: url("src\assets\imagenes\home\fondo.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
