--- a/CriptoWalletFront/src/app/components/home/home.component.html
+++ b/CriptoWalletFront/src/app/components/home/home.component.html
@@ -6,11 +6,12 @@
       alt="Registration page logo"
     />
     <h2 class="p-3">Home Page</h2>
+    <h5 class="p-3">Welcome {{usuario.nombre}}</h5>
   </div>
 
   <div class="card text-white bg-dark mb-4" style="width: 30rem; height: 20rem">
     <div style="text-align: center" class="card-header">
-      Balance Total {{ usuario.nombre }}
+      Total in account number N°{{ cuentaActiva.numeroDeCuenta }}
     </div>
     <div
       class="card-body d-flex flex-column justify-content-center align-items-center"
