--- a/CriptoWalletFront/src/app/components/transaction/transaction.component.html
+++ b/CriptoWalletFront/src/app/components/transaction/transaction.component.html
@@ -10,7 +10,7 @@
           <th scope="col">Account</th>
           <th scope="col">Recipient Account</th>
           <th scope="col">Type of operation</th>
-          <th scope="col">Amount</th>
+          <th scope="col">Actual Amount</th>
         </tr>
       </thead>
       <tbody >
